# ILEngine

./: .gitignore  CMakeLists.txt  Engine.cpp  LICENSE  Makefile  Model.h  ModelLoader.cpp  ModelLoader.h  Object.h  README.md  ShaderProgram.cpp  ShaderProgram.h  _model.cpp  _model.h  _model_loader.cpp  _model_loader.h  _object.cpp  _object.h
src/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Error.cpp  Error.h  ILEngine.cpp  LightSource.cpp  LightSource.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Object.cpp  Object.h  Primitive.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  SimpleShader.fragment.glsl  SimpleShader.vertex.glsl  Vertex.h  common.h
test/: EngineTest.cpp  ModelTest.cpp  ShaderTest.cpp
